2002-07-14  Martin Willers <willers@xm-arts.de>
	- KPassivePopup now stays on-screen until acknowlegded by mouse-click

2002-06-23  Matthias Hoelzer-Kluepfel <mhk@kde.org>
	- added left-click menu while steeping
        - gave focus to name edit when a new tea is added
	- now unable to start steeping if no teas exist
	- added a QCheckBox to enable/disable the action field
	- made text in the name edit field right-justified
	(patch provided by Jackson Dunstan <jdunstan@digipen.edu>)

2002-06-20  Matthias Hoelzer-Kluepfel <mhk@kde.org>
	- improved the display of times in the menu
	  (patch provided by -Jackson Dunstan <jdunstan@digipen.edu>)
	  
2002-04-20  Martin Willers <willers@xm-arts.de>
	- also displaying name of current tea when finished

2002-04-20  Martin Willers <willers@xm-arts.de>
	- now displaying name of current tea in tooltip
	- better removing of unused tea-entries from config
	- some cleanups

2002-04-18  Martin Willers <willers@xm-arts.de>
	- when saving config, non-used old tea-entries are now deleted from config

2002-04-10  Martin Willers <willers@xm-arts.de>
	- Bugfix: when tea was finished, click on icon -> icon ok, but
	  tooltip was still "tea finished"
	- added "Cancel"-button to menu, and can also cancel timer by clicking
	  on icon while running
	- showing remaining time not as "x.y", but as "xx:yy"
	- can configure arbitrary amount of teas, with custom name and time